--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <section>
             <h3>Фото з магазину:</h3>
-            <p><img src="https://eu-central-1.linodeobjects.com/list/production/171066/gallery/big/660e6ab2345bf.jpg?1316609607"  height="150px"><img src="https://eu-central-1.linodeobjects.com/list/production/171066/gallery/big/660e6ab84a4b9.jpg?1316609607"height="150"><img src="https://eu-central-1.linodeobjects.com/list/production/171066/gallery/big/660e6ad5809fd.jpg?1316609607"height="150"></p>
+            <p style="text-align:cenyer;"><img src="https://eu-central-1.linodeobjects.com/list/production/171066/gallery/big/660e6ab2345bf.jpg?1316609607"  height="150px"><img src="https://eu-central-1.linodeobjects.com/list/production/171066/gallery/big/660e6ab84a4b9.jpg?1316609607"height="150"><img src="https://eu-central-1.linodeobjects.com/list/production/171066/gallery/big/660e6ad5809fd.jpg?1316609607"height="150"></p>
         </section>
 
         <div class="divider"></div>
